--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,500&family=Nunito:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,500&family=Nunito:wght@300;400&family=Roboto:wght@300;400;500&display=swap');
 
 * {
   margin: 0;
@@ -7,8 +7,7 @@
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
-  /* font-family: 'Nunito', sans-serif; */
-  background-color: black;
+  font-family: 'Roboto', sans-serif;  /* font-family: 'Nunito', sans-serif; */
+  background-color: #172026;
 }
 
